finalizando menu hover

--- a/index.html
+++ b/index.html
@@ -3,19 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="style/style.css" />
+    <title>Mob 7 Marcenaria</title>
 </head>
 <body>
-    <nav>
-        <img src="" alt="">
-        <div class="menu-itens">
-            <a href="">INICIO</a>
-            <a href="">QUEM SOMOS</a>
-            <a href="">AMBIENTES</a>
-            <a href="">PROJETO</a>
-            <a href="">CONTATO</a>
-        </div>
-    </nav>
+        <!---------------ABERTURA MENU--------------->
+        <nav>
+            <a href="/"><img src="./assets/Mob 7 marca d'agua 1.png" alt="logo-marcenaria"></a>
+            <ul>
+                <li><a href="#inicio">INICIO</a></li>
+                <li><a href="#quem-somos">QUEM SOMOS</a></li>
+                <li><a href="#ambientes">AMBIENTES</a></li>
+                <li><a href="#projetos">PROJETOS</a></li>
+                <li><a href="#contato">CONTATO</a></li>
+            </ul>
+        </nav>
     <header>
         <h1>MÓVEIS PLANEJADOS SOB MEDIDA</h1>
         <p>7 anos de dedicação total, fabricando seu sonho!</p>
