Finalizando sobre nos

--- a/index.html
+++ b/index.html
@@ -19,11 +19,31 @@
             </ul>
         </nav>
     <header>
-        <h1>MÓVEIS PLANEJADOS SOB MEDIDA</h1>
-        <p>7 anos de dedicação total, fabricando seu sonho!</p>
-        <button><a href="">Projetos</a></button>
-        <button><a href="">Contato</a></button>
+        <div class="header-content">
+            <h1>MÓVEIS PLANEJADOS SOB MEDIDA</h1>
+            <p>7 anos de dedicação total, fabricando seu sonho!</p>
+            <div class="btns-header">
+                <button><a href="">Projetos</a></button>
+                <button><a href="">Contato</a></button>
+            </div>
+        </div>
     </header>
+    <div class="sobre-nos">
+        <h2>SOBRE <span>NÓS</span></h2>
+        <div class="sobre-nos-content">
+            <section class="sobre-text">
+                <p>A MOB7 é uma marcenaria especializada na fabricação de móveis em MDF (Medium Density Fiberboard). Nosso compromisso é criar peças de alta qualidade, duráveis e esteticamente atraentes para os nossos clientes. Do design à montagem, cada etapa é executada por profissionais qualificados, garantindo a transformação das suas ideias em realidade.
+                </p>
+                <p>
+                Trabalhamos em estreita colaboração com nossos clientes, utilizando tecnologia de ponta e materiais de alta qualidade para garantir um acabamento impecável e durabilidade excepcional. Nosso portfólio inclui uma variedade de produtos, como armários, estantes, mesas e cadeiras, todos projetados para oferecer funcionalidade e estilo.
+                </p>
+                <p>
+                Valorizamos a sustentabilidade e utilizamos práticas de produção responsáveis sempre que possível. Oferecemos um atendimento personalizado, desde a concepção do projeto até a entrega final, com o objetivo de superar as expectativas dos nossos clientes.
+                </p>
+            </section>
+            <img src="./assets/pexels-cottonbro-5089178 1.png" alt="">
+        </div>
+    </div>
     
 </body>
 </html>
