iniciando section por que nos escolher?

--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 </head>
 <body>
         <!---------------ABERTURA MENU--------------->
-        <nav>
-            <a href="/"><img src="./assets/Mob 7 marca d'agua 1.png" alt="logo-marcenaria"></a>
-            <ul>
-                <li><a href="#inicio">INICIO</a></li>
-                <li><a href="#quem-somos">QUEM SOMOS</a></li>
-                <li><a href="#ambientes">AMBIENTES</a></li>
-                <li><a href="#projetos">PROJETOS</a></li>
-                <li><a href="#contato">CONTATO</a></li>
-            </ul>
-        </nav>
+    <nav>
+        <a href="/"><img src="./assets/Mob 7 marca d'agua 1.png" alt="logo-marcenaria"></a>
+        <ul>
+            <li><a href="#inicio">INICIO</a></li>
+            <li><a href="#quem-somos">QUEM SOMOS</a></li>
+            <li><a href="#ambientes">AMBIENTES</a></li>
+            <li><a href="#projetos">PROJETOS</a></li>
+            <li><a href="#contato">CONTATO</a></li>
+        </ul>
+    </nav>
     <header>
         <div class="header-content">
             <h1>MÓVEIS PLANEJADOS SOB MEDIDA</h1>
@@ -44,6 +44,45 @@
             <img src="./assets/pexels-cottonbro-5089178 1.png" alt="">
         </div>
     </div>
-    
+    <div class="nos-escolher">
+        <section class="video-nos-escolher">
+            <img src="./assets/pexels-cottonbro-5089178 1.png" alt="">
+        </section>
+        <section class="nos-escolher-content">
+            <h2>POR QUE NOS <span>ESCOLHER?</span></h2>
+            <div class="carousel-container">
+                <div class="carousel">
+                    <div class="carousel-item">
+                        <i class="icon">🔧</i>
+                        <h3>Título 1</h3>
+                        <p>Texto descritivo 1</p>
+                    </div>
+                    <div class="carousel-item">
+                        <i class="icon">🌟</i>
+                        <h3>Título 2</h3>
+                        <p>Texto descritivo 2</p>
+                    </div>
+                    <div class="carousel-item">
+                        <i class="icon">📈</i>
+                        <h3>Título 3</h3>
+                        <p>Texto descritivo 3</p>
+                    </div>
+                    <div class="carousel-item">
+                        <i class="icon">⚙️</i>
+                        <h3>Título 4</h3>
+                        <p>Texto descritivo 4</p>
+                    </div>
+                    <div class="carousel-item">
+                        <i class="icon">💡</i>
+                        <h3>Título 5</h3>
+                        <p>Texto descritivo 5</p>
+                    </div>
+                </div>
+                <button class="prev" onclick="prevSlide()">&#10094;</button>
+                <button class="next" onclick="nextSlide()">&#10095;</button>
+            </div>
+        </section>
+    </div>
+    <script src="./scripts/script.js"></script>
 </body>
 </html>
