Finalizando carrossel e adicionando area de projetos

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <li><a href="#contato">CONTATO</a></li>
         </ul>
     </nav>
+        <!---------------ABERTURA HEADER--------------->
     <header>
         <div class="header-content">
             <h1>MÓVEIS PLANEJADOS SOB MEDIDA</h1>
@@ -28,6 +29,7 @@
             </div>
         </div>
     </header>
+        <!---------------ABERTURA SOBRE--------------->
     <div class="sobre-nos">
         <h2>SOBRE <span>NÓS</span></h2>
         <div class="sobre-nos-content">
@@ -44,6 +46,7 @@
             <img src="./assets/pexels-cottonbro-5089178 1.png" alt="">
         </div>
     </div>
+        <!---------------ABERTURA NOS ESCOLHER--------------->
     <div class="nos-escolher">
         <section class="video-nos-escolher">
             <img src="./assets/pexels-cottonbro-5089178 1.png" alt="">
@@ -54,28 +57,28 @@
                 <div class="carousel">
                     <div class="carousel-item">
                         <i class="icon">🔧</i>
-                        <h3>Título 1</h3>
-                        <p>Texto descritivo 1</p>
+                        <h3>Qualidade insuperável</h3>
+                        <p>Na Mob 7 Decorações, priorizamos a qualidade em cada detalhe. Nossos móveis são produzidos com os melhores materiais, garantindo não apenas beleza estética, mas também durabilidade excepcional. Escolha Artmarc e tenha a certeza de investir em móveis que se destacam pela sua excelência.</p>
                     </div>
                     <div class="carousel-item">
                         <i class="icon">🌟</i>
-                        <h3>Título 2</h3>
-                        <p>Texto descritivo 2</p>
+                        <h3>Criatividade</h3>
+                        <p>Na Mob 7 Marcenaria, valorizamos a criatividade e a inovação. Estamos sempre prontos para desenvolver designs únicos e personalizados que se adaptem às tendências e necessidades dos nossos clientes. Nossa capacidade de transformar ideias em peças exclusivas e funcionais nos diferencia no mercado. Além disso, buscamos constantemente inovar com novas técnicas, materiais sustentáveis e soluções de design criativas.</p>
                     </div>
                     <div class="carousel-item">
                         <i class="icon">📈</i>
-                        <h3>Título 3</h3>
-                        <p>Texto descritivo 3</p>
+                        <h3>Conhecimento</h3>
+                        <p>Aqui na Mob 7 Marcenaria, contamos com um profundo conhecimento técnico sobre materiais, ferramentas e técnicas de marcenaria. Sabemos como escolher a madeira ideal para cada projeto e dominamos diversas técnicas, desde o entalhe até o acabamento. Essas habilidades nos permitem criar peças duráveis, funcionais e esteticamente agradáveis, sempre atendendo e superando as expectativas dos nossos clientes.</p>
                     </div>
                     <div class="carousel-item">
                         <i class="icon">⚙️</i>
-                        <h3>Título 4</h3>
-                        <p>Texto descritivo 4</p>
+                        <h3>Precisão</h3>
+                        <p>Na Mob 7 Marcenaria, a precisão é a nossa marca registrada. Cada medida que tomamos e cada corte que fazemos é pensado com extremo cuidado para garantir que todas as peças se encaixem perfeitamente. Valorizamos a atenção aos detalhes para que nossos produtos finais não sejam apenas funcionais, mas também visualmente impecáveis. A dedicação ao trabalho bem-feito reflete nosso compromisso com a qualidade e a satisfação de nossos clientes.</p>
                     </div>
                     <div class="carousel-item">
                         <i class="icon">💡</i>
-                        <h3>Título 5</h3>
-                        <p>Texto descritivo 5</p>
+                        <h3>Experiência</h3>
+                        <p>Na Mob 7 Marcenaria, valorizamos a experiência e a tradição no ofício. Com anos de prática e conhecimento acumulado, trazemos uma rica herança de técnicas artesanais que conferem autenticidade e qualidade ao nosso trabalho. Respeitamos as técnicas tradicionais de marcenaria, combinando-as com abordagens modernas para criar peças que são ao mesmo tempo clássicas e inovadoras. Nosso compromisso com a tradição garante que cada projeto seja uma verdadeira obra de arte.</p>
                     </div>
                 </div>
                 <button class="prev" onclick="prevSlide()">&#10094;</button>
@@ -84,5 +87,38 @@
         </section>
     </div>
     <script src="./scripts/script.js"></script>
+        <!---------------ABERTURA PROJETOS--------------->
+    <div class="container-projetos">
+        <div class="interactive-div" onclick="location.href='projetos.html'" style="background-image: url('./assets/SALA.png');">
+            <div class="content">
+                <img src="./assets/Mob 7 marca d'agua 1.png" alt="Marca d'água">
+                <h3>SALA</h3>
+            </div>
+        </div>
+        <div class="interactive-div" onclick="location.href='projetos.html'" style="background-image: url('./assets/CLOSET.png');">
+            <div class="content">
+                <img src="./assets/Mob 7 marca d'agua 1.png" alt="Marca d'água">
+                <h3>CLOSET</h3>
+            </div>
+        </div>
+        <div class="interactive-div" onclick="location.href='projetos.html'" style="background-image: url('./assets/HOME.png');">
+            <div class="content">
+                <img src="./assets/Mob 7 marca d'agua 1.png" alt="Marca d'água">
+                <h3>HOME</h3>
+            </div>
+        </div>
+        <div class="interactive-div" onclick="location.href='projetos.html'" style="background-image: url('./assets/DORMITORIO.png');">
+            <div class="content">
+                <img src="./assets/Mob 7 marca d'agua 1.png" alt="Marca d'água">
+                <h3>DORMITÓRIO</h3>
+            </div>
+        </div>
+        <div class="interactive-div" onclick="location.href='projetos.html'" style="background-image: url('./assets/COZINHA.png');">
+            <div class="content">
+                <img src="./assets/Mob 7 marca d'agua 1.png" alt="Marca d'água">
+                <h3>COZINHA</h3>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
