finalizando estrutura do site

--- a/index.html
+++ b/index.html
@@ -120,5 +120,26 @@
             </div>
         </div>
     </div>
+        <!---------------ABERTURA PROJETOS--------------->
+    <div class="contato">
+        <div class="form">
+            <h2>ENTRE EM <span> CONTATO</span></h2>
+            <div class="same-line">
+                <input type="text" placeholder="Nome">
+                <input type="text" placeholder="Sobrenome">
+            </div>
+            <input type="email" placeholder="E-mail">
+            <input type="email" placeholder="Assunto">
+            <textarea name="msg" placeholder="Mensagem"></textarea>
+            <button>ENVIAR</button>
+        </div>
+        <div class="map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3653.805629165654!2d-46.65623332378472!3d-23.682908016070648!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce451dd6ccadcb%3A0x91883e0dc7077648!2zTU9CIDcgREVDT1JBw4fDlUVT!5e0!3m2!1spt-BR!2sbr!4v1718032706252!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+    </div>
+        <!---------------ABERTURA FOOTER--------------->
+    <footer>
+        <p>© Copyright Mob 7 Decorações 2024. Direitos Autorais Reservados.</p>
+    </footer>
 </body>
 </html>
