responsividade menu e header

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
         <!---------------ABERTURA MENU--------------->
     <nav>
         <a href="/"><img src="./assets/Mob 7 marca d'agua 1.png" alt="logo-marcenaria"></a>
-        <ul>
+        <div class="menu-icon" id="menu-icon">
+            &#9776; <!-- Ícone de menu hambúrguer -->
+        </div>
+        <ul id="menu">
             <li><a href="#inicio">INICIO</a></li>
             <li><a href="#quem-somos">QUEM SOMOS</a></li>
             <li><a href="#ambientes">AMBIENTES</a></li>
